LPD-X test fixes